--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -9,15 +9,14 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
-
-
       connect-timeout-millis: 10000
       socket-timeout-millis: 60000
+
 zuul:
   routes:
-    client1:
+    post:
       serviceId: post-api
       path: /api/v1/post/**
-    client2:
+    account:
       serviceId: account-api
       path: /api/v1/account/**
