Add another changes

--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,9 @@ dependencies {
     /* zuul */
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul:2.2.3.RELEASE'
 }
+
+def profile = "develop"
+
+bootRun {
+    args = ["--spring.profiles.active=" + profile]
+}
