--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,14 +1,15 @@
-server:
-  port: 8000
-
 spring:
   application:
     name: api-gateway
 
+--- # cloud # ---
+server:
+  port: 8000
+
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://registry-service:8761/eureka
       connect-timeout-millis: 10000
       socket-timeout-millis: 60000
 
@@ -20,3 +21,12 @@ zuul:
     account:
       serviceId: account-api
       path: /api/v1/account/**
+
+--- # develop # ---
+server:
+  port: 8001
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
